--- a/Interview/Interview.csproj
+++ b/Interview/Interview.csproj
@@ -66,7 +66,10 @@
     <Compile Include="IRepository.cs" />
     <Compile Include="IStoreable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="InMemoryRepository.cs" />
+    <Compile Include="Storeable.cs" />
     <Compile Include="Tests.cs" />
+    <Compile Include="UnitTestInterview.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
